--- a/ode_record/CMakeLists.txt
+++ b/ode_record/CMakeLists.txt
@@ -50,6 +50,8 @@ install(DIRECTORY config launch
   DESTINATION share/${PROJECT_NAME}
   )
 
+  install(PROGRAMS scripts/telemetry.py DESTINATION lib/${PROJECT_NAME})
+
 if(BUILD_TESTING)
   find_package(ament_lint_auto REQUIRED)
   # the following line skips the linter which checks for copyrights
