--- a/ode_record/config/record.yaml
+++ b/ode_record/config/record.yaml
@@ -1,13 +1,13 @@
 record:
   ros__parameters:
-    output_dir: '/home/zainir17/ta_ws/record' # Directory to save the recordings
+    output_dir: '/home/omodapc/ros2-icar/record' # Directory to save the recordings
     lidar_list:
-      - '/lidarkiri/lidar_points'
+      - '/velodynekanan/velodyne_points'
       - '/lidartengah/lidar_points'
-      - '/lidarkanan/lidar_points'
+      - '/velodynekiri/velodyne_points'
     camera_list:
-      # - '/camerakiri'
+      - '/camerakiri/image_raw'
       - '/cameratengah/image_raw'
-      # - '/camerakanan'
-    navsat_topic: '/gps/fix' # GPS topic
-    frequency: 2.0 #Hz
+      - '/camerakanan/image_raw'
+    navsat_topic: '/fix' # GPS topic
+    samp_time: 10.0 #seconds
