--- a/ode_bringup/config/camera_driver.yaml
+++ b/ode_bringup/config/camera_driver.yaml
@@ -10,7 +10,8 @@ camerakiri:
 cameratengah:
   camera_node:
     ros__parameters:
-      video_device: /dev/v4l/by-path/pci-0000:05:00.3-usb-0:1.1:1.0-video-index0
+      video_device: /dev/video2
+      # video_device: /dev/v4l/by-path/pci-0000:05:00.3-usb-0:1.1:1.0-video-index0
       # video_device: /dev/v4l/by-path/pci-0000:00:14.0-usb-0:5:1.0-video-index0
       camera_info_url: "package://ode_bringup/config/ost.yaml"
       pixel_format: "YUYV"
